--- a/_includes/styles.html
+++ b/_includes/styles.html
@@ -1,1 +1,1 @@
-<link rel="stylesheet" href="{{ "/assets/css/style.scss" | relative_url }}">
+<link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
