--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,8 +1,5 @@
 <sidebar class="sidebar" id="sidebar">
-  <div class="sidebar-mobile">
-    <img src="{{ "/assets/images/menu.svg" | relative_url }}" class="menu-icon" id="menu" />
-    <img src="{{ "/assets/images/close.svg" | relative_url }}" class="close-icon" id="close" />
-  </div>
+  <button class="search-menu-button" id="search-close"></button>
   {% include search.html %}
   <div class="sidebar-main">
     {% include navigation.html %}
