--- a/_includes/search.html
+++ b/_includes/search.html
@@ -1,5 +1,5 @@
 <div class="search">
-  <input type="text" class="search-input" id="search-input" placeholder="Type to search" />
+  <input type="text" class="search-input" id="search-input" placeholder="type to search" />
 </div>
 
 <script>
