--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,14 +16,18 @@
 	--base-height: 1em;
 	--header-height: 50px;
 
-	--min-width: 360px;
+	--min-width: 320px;
 
 	--content-width: 800px;
-	--sidebar-width: 300px;
+	--sidebar-width: 350px;
 }
 
-* {
-	box-sizing: border-box;
+
+/* GENERAL STYLES */
+*{
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
 }
 
 html, body {
@@ -31,58 +35,173 @@ html, body {
 	margin: 0;
 	max-height: 100%;
 	min-width: var(--min-width);
-	overflow: hidden;
 }
 
 body {
 	color: var(--color);
-	font-family:"Roboto", sans-serif;
+    font-family:"Roboto", sans-serif;
 }
 
-a {
-	color: inherit;
-	text-decoration: none;
+h1{
+    font-size: 40px;
+	font-weight: 700;
+    color: #1e1e1e;
+    margin: 10px 0px 30px 0px;
+}
+
+h2{
+    font-size: 28px;
+    font-weight: 500;
+    line-height: 1.43;
+    color: #1e1e1e;
+    margin: 20px 0px 10px 0px;
+}
+
+h3{
+    margin: 15px 0px 5px 0px;
+}
+
+h4{
+    margin: 10px 0px 0px 0px;
+}
+
+a{
+    font-size: 18px;
+    text-decoration: none;
+    color: #311b58;
+}
+
+p{
+    font-size: 18px;
+    margin: 10px 0px;
+}
+
+
+hr{
+    width: 100%;
+    height: 2px;
+    border: none;
+    background-color: #f0f0f0;
+    margin-top: 80px;
+}
+
+button{
+    outline: none;
+    border: none;
+    cursor: pointer;
+}
+
+
+a:active, a:focus, a:hover{
+    outline: none;
+    text-decoration: none;
 }
 
 a:hover {
 	color: var(--hl-color);
-	text-decoration: none;
 }
 
 code, pre, table {
 	font-family: "Roboto Mono", monospace;
 }
 
-/*
-pre {
-	margin-bottom: calc(var(--base-height) * 2) !important;
+div.container-custom{
+    max-width: 1200px;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0px;
 }
-*/
 
+.inner-container{
+    width: 74%;
+    margin: 0px auto;
+}
+
+.clearfix::after{
+    display: block;
+    content: "";
+    clear: both;
+}
+
+p{
+    font-size: 18px;
+    margin: 10px 0px;
+}
+
+.search-menu-button{
+    display: none;
+    width: 24px;
+    height: 24px;
+    position: absolute;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: 24px;
+    background-color: transparent;
+    padding: 0px;
+    margin: 0px;
+    border: none;
+}
+
+.search-menu-button:hover, .search-menu-button:focus{
+    background-color: transparent;
+    outline: 0;
+}
+
+/* tablet & mobile */
+@media only screen and (max-width:1023px){ 
+    .inner-container {
+        width: 90%;
+    }
+}
+/* END OF GENERAL STYLES */
+
+
+/* WRAPPER */
 .wrapper {
-	display: flex;
-	height: 100%;
-	max-height: 100%;
-	min-height: 100%;
 	overflow: hidden;
-	width: 100%;
+	margin-top: 77px;
+    margin-bottom: 50px;
+    position: relative;
 }
 
+#search-open{
+    top: 24px;
+    right: 14px;
+    background-image: url("../icons/reading-list.svg");
+}
+
+/* tablet & mobile */
+@media only screen and (max-width:1023px){ 
+    .wrapper {
+        margin-top: 40px;
+    }
+
+    #search-open{
+        display: block;
+    }
+}
+/* END OF WRAPPER */
+
+
+
+/* SIDEBAR */
 .sidebar {
-	border-right: var(--border);
+	float: left;
+	border-radius: 14px;
+	-webkit-border-radius: 14px;
+	-moz-border-radius: 14px;
+	background-color: #f5f5f5;
 	color: var(--fg-color);
 	display: block;
-	height: 100%;
-	max-width: var(--sidebar-width);
 	overflow: hidden;
-	padding: 0;
-	width: 20%;
+	padding: 20px;
+    max-width: 320px;
 }
 
 .sidebar .sidebar-main {
-	background: var(--bg-color);
 	height: 100%;
-	padding: var(--base-height);
+	padding: 30px 30px 30px 20px;
 }
 
 .sidebar .sidebar-mobile {
@@ -101,17 +220,47 @@ pre {
 }
 
 .search {
-	border-bottom: var(--border);
+	border-bottom: 3px solid #f0f0f0;
 	height: var(--header-height);
-	padding: 0 var(--base-height);
+    padding: 0 var(--base-height);
+    padding-right: 30px;
+    position: relative;
 }
 
 .search .search-input {
-	border: none;
-	font-size: 0.9em;
-	font-weight: 300;
+    border: none;
 	height: 100%;
 	width: 100%;
+	padding-left: 45px;
+	font-size: 18px;
+	font-weight: 300;
+	text-align: left;
+}
+
+.search-input::-webkit-input-placeholder{
+	color: #aeaeae;
+}
+.search-input::-moz-placeholder{
+	color: #aeaeae;
+}
+.search-input:-ms-input-placeholder{
+	color: #aeaeae;
+}
+.search-input:-moz-placeholder {
+	color: #aeaeae;
+}
+
+.search::before{
+    content: " ";
+    position: absolute;
+    width: 14px;
+    height: 14px;
+    background-image: url("../icons/search.svg");
+    background-size: 14px;
+    background-repeat: no-repeat;
+    background-position: center;
+    top: 18px;
+    left: 36px;
 }
 
 .navigation {
@@ -124,7 +273,7 @@ pre {
 
 .navigation li {
 	margin: 0;
-	padding: 10px 15px;
+	padding: 5px 15px;
 }
 
 .navigation a {
@@ -132,72 +281,470 @@ pre {
 	overflow: hidden;
 	text-overflow: ellipsis;
 	white-space: nowrap;
+
+	font-size: 18px;
+	font-weight: 500;
+	line-height: 2.22;
+	text-align: left;
+	color: #1e1e1e;
 }
 
 .navigation a.active {
 	color: var(--hl-color);
 }
 
-.content {
-	color: var(--fg-color);
-	display: flex;
+#search-close{
+    top: 20px;
+    right: 14px;
+    background-image: url("../icons/close-black.svg");
+    z-index: 2;
+}
+
+
+/* tablet & mobile */
+@media only screen and (max-width:1023px){
+    .sidebar{
+        display: none;
+        float: none;
+        position: absolute;
+        top: 0px;
+        left: 0px;
+        width: 100%;
+        z-index: 1;
+        max-width: none;
+    }
+
+    .sidebar.open{
+        display: block;
+    }
+
+    .sidebar .sidebar-main{
+        padding: 30px 20px;
+    }
+
+    .sidebar.open #search-close{
+        display: block;
+    }
+}
+/* END OF SIDEBAR */
+
+
+/* MAIN CONTENT */
+main.content{
+	overflow: hidden;
+	padding-left: 90px;
+}
+
+/* tablet & mobile */
+@media only screen and (max-width:1023px){
+    main.content{
+        padding: 0px;
+    }
+
+    main.content h1{
+        padding-right: 50px;
+    }
+
+    .sidebar.open + main.content{
+        opacity: 0.4;
+    }
+}
+/* END OF MAIN CONTENT */
+
+
+/* BUTTONS */
+.btn{
+    background-color: var(--hl-color);
+    border-radius: 50px;
+    -webkit-border-radius: 50px;
+    -moz-border-radius: 50px;
+    outline: none;
+    color: #ffffff;
+    padding: 12px 28px;
+    cursor: pointer;
+    font-weight: 500;
+    line-height: 1.44;
+    top: 0px;
+    left: 0px;
+    position: relative;
+    transition: all 0.2s ease-in-out;
+    -webkit-transition: all 0.2s ease-in-out;
+    -moz-transition: all 0.2s ease-in-out;
+    -o-transition: all 0.2s ease-in-out;
+}
+
+.btn:hover, .btn:active, .btn:focus{
+	background-color: var(--hl-color);
+    top: -2px;
+    left: -1px;
+    color: #ffffff;
+    box-shadow: 0 4px 8px 0 rgba(60, 60, 60, 0.1);
+    -webkit-box-shadow: 0 4px 8px 0 rgba(60, 60, 60, 0.1);
+    -moz-box-shadow: 0 4px 8px 0 rgba(60, 60, 60, 0.1);
+}
+/* END OF BUTTONS */
+
+
+/* HEADER */
+header{
+    padding: 33px 0px;
+    position: relative;
+    top: 0px;
+    left: 0px;
+    width: 100%;
+    background-color: transparent;
+    text-align: right;
+}
+
+header a{
+    color: #311b58;
+    display: inline-block;
+    font-weight: 500;
+    padding: 10px 0px;
+}
+
+header a{
+	margin-left: 30px;
+	font-size: 18px;
+	font-weight: 500;
+	text-align: left;
+	color: #311b58;
+}
+
+header a.logo{
+    display: block;
+	position: absolute;
+	margin: 0px;
+    top: 50%;
+    width: 50px;
+    transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+}
+
+header a.logo img{
+	max-width: 100%;
+}
+
+#open-menu{
+	display: none;
+	width: 50px;
+	height: 50px;
+	border-radius: 50%;
+	-webkit-border-radius: 50%;
+	-moz-border-radius: 50%;
+	padding: 0px;
+	background-image: url("../icons/burger.svg");
+	background-repeat: no-repeat;
+	background-size: 24px;
+	background-position: center;
+}
+
+/* mobile */
+@media only screen and (max-width: 639px){
+    header a.header-menu-link, header a.btn{
+        display: none;
+    }
+
+    #open-menu{
+        display: inline-block;
+    }
+}
+/* END OF HEADER */
+
+
+
+/* FOOTER */
+footer{
+    background-color: #f5f5f5;
+    padding: 68px 0px 105px 0px;
+    overflow: hidden;
+	position: relative;
+	font-weight: 400;
+}
+
+footer::before{
+    content: " ";
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    height: 5px;
+    width: 100%;
+    background-color: #f7296e;
+}
+
+footer .container-custom{
+    position: relative;
+}
+
+footer .presentation{
+    float: left;
+    width: 20%;
+}
+
+footer .presentation a.logo{
+	padding: 20px 0px 10px 0px;
+	font-size: 18px;
+    text-decoration: none;
+}
+
+footer img{
+    display: inline-block;
+	width: 171px;
+}
+
+footer .presentation p{
+    font-size: 16px;
+	line-height: 1.5;
+    color: #1e1e1e;
+	margin-bottom: 7px;
+}
+
+footer .presentation span a{
+    font-size: 14px;
+	line-height: 2.0;
+	color: #1e1e1e;
+	letter-spacing: initial;
+}
+
+footer .footer-nav{
+    position: absolute;
+    right: 0px;
+    top: 0px;
+}
+
+footer .links{
+    float: left;
+    margin-left: 125px;
+}
+
+footer .links ul{
+    padding: 0px;
+    margin: 0px;
+    list-style: none;
+}
+
+footer .links ul li{
+    margin-bottom: 10px
+}
+
+footer .links ul li a{
+    position: relative;
+    display: block;
+    font-size: 16px;
+	line-height: 1.5;
+    color: #1e1e1e;
+	padding: 4px 0px 4px 40px;
+}
+
+footer .links ul li img {
+    position: absolute;
+    width: 24px;
+    top:50%;
+    margin-top: -12px;
+    left: 0px;
+}
+
+/* desktop only */
+@media only screen and (min-width:1024px){
+    footer .inner-container{
+        width: initial;
+        margin: initial;
+    }
+}
+
+/* tablet & mobile */
+@media only screen and (max-width: 1023px){
+    footer{
+        padding-bottom: 58px;
+    }
+
+    footer .presentation{
+        float: none;
+        width: initial;
+    }
+
+    footer .presentation p{
+        margin-bottom: 2px;
+    }
+
+    footer .footer-nav{
+        position: static;
+    }
+
+    footer footer-nav .links:first-child{
+        margin-left: 0px;
+    }
+
+    footer .links{
+        margin: 0px;
+    }
+
+    footer .links.icons{
+        float: left;
+        width: 50%;
+    }
+
+    footer .links.menu{
+        float: none;
+        margin: 50px 0px 55px 0px;
+    }
+
+    footer .links.menu + .links{
+        margin: 0px;
+    }
+
+    footer .links.links.menu ul li a{
+        padding: 4px 0px;
+    }
+}
+/* END OF FOOTER */
+
+
+/* SIDEMENU */
+/* General styles for all menus */
+
+.cbp-spmenu {
+	background: #f7296e;
+    position: fixed;
+    text-align: right;
+    padding: 40px 0px;
+}
+
+.cbp-spmenu ul{
+    list-style: none;
+    padding: 0px;
+    margin-top: 60px;
+    margin-bottom: 10px;
+}
+
+.cbp-spmenu li a {
+	display: block;
+    font-size: 40px;
+	font-weight: 700;
+    line-height: 1.75;
+    color: #ffffff;
+}
+
+.cbp-spmenu li a:hover {
+    text-decoration: underline;
+    color: #ffffff;
+}
+
+.cbp-spmenu .sidebar-icons > div img{
+    width: 24px;
+    margin-left: 30px;
+    margin-bottom: 27px;
+}
+
+.cbp-spmenu .sidebar-icons{
+    position: absolute;
+    bottom: 0px;
+    right: 0px;;
+}
+
+#close-menu{
+    background-color: transparent;
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    background-image: url("../icons/close.svg");
+    background-repeat: no-repeat;
+    background-size: 24px;
+    background-position: right;
+}
+
+.cbp-spmenu .container-custom{
+    position: relative;
+    height: 100%;
+}
+
+.cbp-spmenu .secondary-links a{
+	display: inline-block;
+	font-size: 24px;
+	line-height: 2;
+	color: #ffffff;
+}
+
+/* Orientation-dependent styles for the content of the menu */
+
+.cbp-spmenu-vertical {
+	width: 100%;
 	height: 100%;
-	justify-content: center;
-	line-height: 1.7;
-	min-height: 100%;
-	overflow-y: auto;
-	width: 100%;
-	word-wrap: break-word;
+	top: 0;
+	z-index: 1000;
 }
 
-.inner {
-	max-width: var(--content-width);
-	padding: var(--base-height) calc(var(--base-height) * 2) calc(var(--base-height) * 3) var(--base-height);
-	width: 100%;
+
+/* Vertical menu that slides from the left or right */
+.cbp-spmenu-right {
+	right: -100%;
 }
 
-.section {
-	margin-bottom: var(--base-height);
+.cbp-spmenu-left.cbp-spmenu-open {
+	left: 0px;
 }
 
-@media (max-width: 745px) {
-	.wrapper {
-		flex-direction: column;
+.cbp-spmenu-right.cbp-spmenu-open {
+	right: 0px;
+}
+
+
+/* Push classes applied to the body */
+
+.cbp-spmenu-push {
+	overflow-x: hidden;
+	position: relative;
+	left: 0;
+}
+
+.cbp-spmenu-push-toright {
+	left: 240px;
+}
+
+.cbp-spmenu-push-toleft {
+	left: -240px;
+	overflow: hidden;
+}
+
+/* Transitions */
+
+.cbp-spmenu,
+.cbp-spmenu-push {
+	-webkit-transition: all 0.3s ease;
+	-moz-transition: all 0.3s ease;
+	transition: all 0.3s ease;
+}
+
+/* Example media queries */
+
+@media screen and (max-width: 55.1875em){
+
+	.cbp-spmenu-horizontal {
+		font-size: 75%;
+		height: 110px;
 	}
 
-	.sidebar {
-		border-right: none;
-		height: var(--header-height);
-		max-width: 100%;
-		width: 100%;
+	.cbp-spmenu-top {
+		top: -110px;
 	}
 
-	.sidebar .sidebar-mobile {
-		display: block;
+	.cbp-spmenu-bottom {
+		bottom: -110px;
 	}
 
-	.sidebar .sidebar-mobile .menu-icon {
-		display: inline;
+}
+
+@media screen and (max-height: 26.375em){
+
+	.cbp-spmenu-vertical {
+		font-size: 90%;
+		width: 190px;
 	}
 
-	.sidebar.opened {
-		border-bottom: var(--border);
-		height: auto;
-		overflow: visible;
-	}
-
-	.sidebar.opened .sidebar-mobile {
-		background: var(--bg-color);
-	}
-
-	.content {
-		height: calc(100% - var(--header-height));
-		margin-top: 0;
-		min-height: calc(100% - var(--header-height));
-		width: 100%;
-	}
-
-	.inner {
-		padding: var(--base-height);
+	.cbp-spmenu-push-toright {
+		left: 190px;
 	}
 }
+/* END OF SIDEMENU */
