--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -11,15 +11,14 @@
             </span>
         </div>
 
-
         <div class="footer-nav">
             <div class="links menu">
                 <ul>
                     <li>
-                        <a href="/aepps">All æpps</a>
+                        <a href="http://aepps.com">Consumer</a>
                     </li>
                     <li>
-                        <a href="">Developer</a>
+                        <a href="http://aepps.com/aepps">All æpps</a>
                     </li>
                     <li>
                         <a href="/imprint">Imprint</a>
@@ -66,8 +65,6 @@
                     </li>
                 </ul>
             </div>
-
         </div>
-
     </div>
 </footer>
