--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,12 +1,12 @@
 <header>
     <div class="container-custom">
         <a class="logo" href="{{ "/" | relative_url }}">
-            <img src="{{ "/assets/images/logo.svg" | relative_url }}" alt="Aeternity">
+            <img src="{{ "/assets/images/logo.svg" | relative_url }}" alt="æternity">
         </a>
 
-        <a class="header-menu-link" href="/">Components</a>
-        <a class="header-menu-link" href="/">Open Bounties</a>
-        <a href="" class="btn">æpps.com</a>
+        <a class="header-menu-link" href="http://bounties.aepps.com">Bounties</a>
+        <a class="header-menu-link" href="http://components.aepps.com">Components</a>
+        <a class="btn" href="http://aepps.com">Consumer</a>
 
         <button id="open-menu" class="btn"></button>
     </div>
