--- a/_includes/mobile-menu.html
+++ b/_includes/mobile-menu.html
@@ -3,13 +3,13 @@
         <button id="close-menu"></button>
         <ul>
             <li>
-                <a href="/">æpps.com</a>
+                <a href="http://bounties.aepps.com">Bounties</a>
             </li>
             <li>
-                <a href="">Components</a>
+                <a href="http://components.aepps.com">Components</a>
             </li>
             <li>
-                <a href="">Open Bounties</a>
+                <a href="http://aepps.com">Consumer</a>
             </li>
         </ul>
 
@@ -49,5 +49,4 @@
             </div>
         </div>
     </div>
-
 </nav>
