update header link and submodules

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -8,7 +8,7 @@
         <a class="header-menu-link" href="http://bounties.aepps.com">Bounties</a>
         -->
         <a class="header-menu-link" href="http://components.aepps.com">Components</a>
-        <a class="btn" href="http://aepps.com">Consumer</a>
+        <a class="btn" href="http://aepps.com">Discover æpps</a>
 
         <button id="open-menu" class="btn"></button>
     </div>
