--- a/_includes/mobile-menu.html
+++ b/_includes/mobile-menu.html
@@ -11,7 +11,7 @@
                 <a href="http://components.aepps.com">Components</a>
             </li>
             <li>
-                <a href="http://aepps.com">Consumer</a>
+                <a href="http://aepps.com">Discover æpps</a>
             </li>
         </ul>
 
