--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -2,3 +2,10 @@
 <script src="{{ "/assets/js/lunar.min.js" | relative_url }}"></script>
 <script src="{{ "/assets/js/search.js" | relative_url }}" async></script>
 <script src="{{ "/assets/js/mobile-navigation.js" | relative_url }}" async></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-116939746-2"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'UA-116939746-2');
+</script>
