--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,4 +9,12 @@
   <link href="https://fonts.googleapis.com/css?family=Roboto:300, 400,500,700" rel="stylesheet">
   <link rel="icon" href="{{ " /assets/images/favicon.ico " | relative_url }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}"> {% include styles.html %}
+
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-116939746-2"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'UA-116939746-2');
+  </script>
 </head>
