update navigation structure

--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -5,14 +5,24 @@
     {% assign parentloopindex = forloop.index%}
 
         <li data-id="{{parentloopindex}}">
-            <a class="parent">{{ sec.section }}</a>
+            <a
+			{% if sec.subpages[0] %}class="parent"{% endif %}
+			{% if page.url == sec.link %}class="active"{% endif %}
+			{% if sec.link %}href="{{ sec.link }}"{% endif %}
+			{% if sec.external==true %}target="_blank"{% endif %}>
+				{{ sec.section }}
+			</a>
 
           {% if sec.subpages[0] %}
           <ul class="navigation-inner">
             {% for sp in sec.subpages %}
-
             <li>
-                <a {% if  page.url == sp.page.link %}class="active"{% endif %} href="{{ sp.page.link }}" {% if sp.page.external==true %}target="_blank"{% endif %}>{{ sp.page.label }}</a>
+                <a
+            	{% if  page.url == sp.page.link %}class="active"{% endif %}
+                href="{{ sp.page.link }}"
+                {% if sp.page.external==true %}target="_blank"{% endif %}>
+					{{ sp.page.label }}
+				</a>
             </li>
             {% endfor %}
           </ul>
