apply stash and use https for links

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,10 +5,10 @@
         </a>
 
         <!--
-        <a class="header-menu-link" href="http://bounties.aepps.com">Bounties</a>
+        <a class="header-menu-link" href="https://bounties.aepps.com">Bounties</a>
         -->
-        <a class="header-menu-link" href="http://components.aepps.com">Components</a>
-        <a class="btn" href="http://aepps.com">Discover æpps</a>
+        <a class="header-menu-link" href="https://components.aepps.com">Components</a>
+        <a class="btn" href="https://aepps.com">Discover æpps</a>
 
         <button id="open-menu" class="btn"></button>
     </div>
