--- a/_includes/mobile-menu.html
+++ b/_includes/mobile-menu.html
@@ -4,14 +4,14 @@
         <ul>
             <!--
             <li>
-                <a href="http://bounties.aepps.com">Bounties</a>
+                <a href="https://bounties.aepps.com">Bounties</a>
             </li>
             -->
             <li>
-                <a href="http://components.aepps.com">Components</a>
+                <a href="https://components.aepps.com">Components</a>
             </li>
             <li>
-                <a href="http://aepps.com">Discover æpps</a>
+                <a href="https://aepps.com">Discover æpps</a>
             </li>
         </ul>
 
