--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -89,39 +89,6 @@ button {
 	cursor:pointer;
 }
 
-a:link {
-	color:var(--hl-color);
-	outline:none;
-	text-decoration:none;
-}
-
-a:visited {
-	color:var(--hl-color);
-	outline:none;
-	text-decoration:none;
-}
-
-a:focus {
-	color:var(--hl-color);
-	font-weight:bold;
-	outline:none;
-	text-decoration:none;
-}
-
-a:hover {
-	color:var(--hl-color);
-	font-weight:bold;
-	outline:none;
-	text-decoration:none;
-}
-
-a:active {
-	color:var(--hl-color);
-	font-weight:bold;
-	outline:none;
-	text-decoration:none;
-}
-
 code, pre, table {
 	font-family:"aeternity mono",monospace;
 }
@@ -214,12 +181,12 @@ p {
 	display:block;
 	overflow:hidden;
 	padding:20px;
-	max-width:320px;
+	max-width:270px;
 }
 
 .sidebar .sidebar-main {
 	height:100%;
-	padding:30px 30px 30px 20px;
+	padding:10px 0px;
 }
 
 .sidebar .sidebar-mobile {
@@ -310,6 +277,53 @@ p {
 	color:var(--hl-color);
 }
 
+.navigation > li > a.parent{
+	position: relative;
+	cursor: pointer;
+}
+
+.navigation > li > a.parent::after{
+	content: " ";
+	position: absolute;
+    width: 24px;
+    height: 24px;
+    background-image: url(../icons/chevron-down.svg);
+    background-size: 18px;
+    background-repeat: no-repeat;
+    background-position: center;
+	top: 50%;
+	right: 0px;
+    transform: translateY(-50%);
+    -webkit-transform: translateY(-50%);
+	-moz-transform: translateY(-50%);
+	-ms-transform: translateY(-50%);
+}
+
+.navigation > li > a.current::after{
+	background-image: url(../icons/chevron-down-magenta.svg);
+}
+
+.navigation .navigation-inner{
+	display: none;
+	list-style: none;
+	margin: 0px;
+}
+
+.navigation .open .navigation-inner{
+	display: block;
+}
+
+.navigation .open a.parent::after{
+	transform: translateY(-50%) rotate(180deg);
+	-webkit-transform: translateY(-50%) rotate(180deg);
+	-moz-transform: translateY(-50%) rotate(180deg);
+	-ms-transform: translateY(-50%) rotate(180deg);
+}
+
+.navigation .navigation-inner a{
+	font-weight: 400;
+}
+
 #search-close {
 	top:20px;
 	right:14px;
@@ -334,12 +348,12 @@ p {
 		display:block;
 	}
 
-	.sidebar .sidebar-main {
-		padding:30px 20px;
-	}
-
 	.sidebar.open #search-close {
 		display:block;
+	}
+
+	.sidebar.open .navigation a{
+		line-height: 1.42;
 	}
 }
 /* END OF SIDEBAR */
@@ -349,6 +363,39 @@ main.content {
 	overflow:hidden;
 	padding-left:90px;
 }
+
+main.content a:link {
+	color:var(--hl-color);
+	outline:none;
+	text-decoration:none;
+}
+
+main.content a:visited {
+	color:var(--hl-color);
+	outline:none;
+	text-decoration:none;
+}
+
+main.content a:focus {
+	color:var(--hl-color);
+	font-weight:bold;
+	outline:none;
+	text-decoration:none;
+}
+
+main.content a:hover {
+	color:var(--hl-color);
+	outline:none;
+	text-decoration:underline;
+}
+
+main.content a:active {
+	color:var(--hl-color);
+	font-weight:bold;
+	outline:none;
+	text-decoration:none;
+}
+
 
 /* tablet & mobile */
 @media only screen and (max-width:1023px) {
@@ -393,7 +440,6 @@ main.content {
 }
 
 .btn:focus, .btn:hover, .btn:active {
-	font-weight:500;
 	top:-2px;
 	left:-1px;
 	box-shadow:0 4px 8px 0 rgba(60,60,60,0.1);
@@ -414,17 +460,16 @@ header {
 }
 
 header a {
-	color:#311b58;
 	display:inline-block;
-	font-weight:500;
 	padding:10px 0px;
-}
-
-header a {
 	margin-left:30px;
 	font-size:18px;
 	font-weight:500;
 	text-align:left;
+	color:#311b58;
+}
+
+header a.header-menu-link:hover{
 	color:#311b58;
 }
 
@@ -671,6 +716,7 @@ footer .links ul li img {
 .cbp-spmenu .container-custom {
 	position:relative;
 	height:100%;
+	width: 80%;
 }
 
 .cbp-spmenu .secondary-links a {
@@ -725,30 +771,14 @@ footer .links ul li img {
 	transition:all 0.3s ease;
 }
 
-/* Example media queries */
-@media screen and (max-width:55.1875em) {
-	.cbp-spmenu-horizontal {
-		font-size:75%;
-		height:110px;
+@media only screen and (max-height: 580px){
+	.cbp-spmenu{
+		padding: 10px 0px;
 	}
 
-	.cbp-spmenu-top {
-		top:-110px;
-	}
-
-	.cbp-spmenu-bottom {
-		bottom:-110px;
+	.cbp-spmenu ul{
+		margin-top: 30px;
 	}
 }
 
-@media screen and (max-height:26.375em) {
-	.cbp-spmenu-vertical {
-		font-size:90%;
-		width:190px;
-	}
-
-	.cbp-spmenu-push-toright {
-		left:190px;
-	}
-}
 /* END OF SIDEMENU */
