--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,10 +15,10 @@
             <div class="links menu">
                 <ul>
                     <li>
-                        <a href="http://aepps.com">Consumer</a>
+                        <a href="https://aepps.com">Consumer</a>
                     </li>
                     <li>
-                        <a href="http://aepps.com/aepps">All æpps</a>
+                        <a href="https://aepps.com/aepps">All æpps</a>
                     </li>
                     <li>
                         <a href="/imprint">Imprint</a>
