--- a/_includes/header.html
+++ b/_includes/header.html
@@ -7,8 +7,8 @@
         <!--
         <a class="header-menu-link" href="https://bounties.aepps.com">Bounties</a>
         -->
-        <a class="header-menu-link" href="https://components.aepps.com">Components</a>
-        <a class="btn" href="https://aepps.com">Discover æpps</a>
+        <a class="header-menu-link" href="https://components.aepps.com" target="_blank">Components</a>
+        <a class="btn" href="https://aepps.com" target="_blank">Discover æpps</a>
 
         <button id="open-menu" class="btn"></button>
     </div>
