--- a/_includes/mobile-menu.html
+++ b/_includes/mobile-menu.html
@@ -8,10 +8,10 @@
             </li>
             -->
             <li>
-                <a href="https://components.aepps.com">Components</a>
+                <a href="https://components.aepps.com" target="_blank">Components</a>
             </li>
             <li>
-                <a href="https://aepps.com">Discover æpps</a>
+                <a href="https://aepps.com" target="_blank">Discover æpps</a>
             </li>
         </ul>
 
