--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,4 @@
+
 <footer class="clearfix">
     <div class="container-custom">
 
@@ -39,10 +40,6 @@
                         <a href="https://blog.aeternity.com" target="_blank">
                             <img src="{{ "/assets/icons/ic-medium.svg " | relative_url }}" alt="Medium">Medium</a>
                     </li>
-                    <li>
-                        <a href="https://docs.google.com/forms/d/e/1FAIpQLSc61kY-707G616uFq96Nt3pGc1n7XDaUgEsvzANsot7x3fC2w/viewform" target="_blank">
-                            <img src="{{ "/assets/icons/ic-slack.svg " | relative_url }}" alt="Slack">Slack</a>
-                    </li>
                 </ul>
             </div>
             <div class="links icons">
@@ -56,15 +53,12 @@
                             <img src="{{ "/assets/icons/ic-facebook.svg " | relative_url }}" alt="Facebook">Facebook</a>
                     </li>
                     <li>
-                        <a href="https://twitter.com/aetrnty" target="_blank">
+                        <a href="https://twitter.com/aeternity" target="_blank">
                             <img src="{{ "/assets/icons/ic-twitter.svg " | relative_url }}" alt="Twitter">Twitter</a>
-                    </li>
-                    <li>
-                        <a href="https://www.linkedin.com/company/aeternity" target="_blank">
-                            <img src="{{ "/assets/icons/ic-linkedin.svg " | relative_url }}" alt="LinkedIn">LinkedIn</a>
                     </li>
                 </ul>
             </div>
         </div>
     </div>
 </footer>
+
